# media-api

./: .env  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: load_test.rs
proto/: decode.proto
src/: config.rs  decode.rs  grpc.rs  lib.rs  main.rs  pool.rs  router.rs  stats.rs  tcp_handler.rs
testdata/golden/: grpc_mp3.s16le  http11_flac.s16le  http11_mp3.s16le  http11_ogg_opus.s16le  http11_webm.s16le  http2_aac.s16le  http2_mp3.s16le  http3_mp3.s16le  http_flac.s16le  http_m4a_slow.s16le  http_ogg_opus.s16le  http_opus.s16le  http_webm.s16le  tcp_mp3_concat_3files.s16le
testdata/m4a/: A_Tusk_is_used_to_make_costly_gifts.m4a  A_big_wet_stain_was_on_the_round_carpet.m4a  A_blue_crane_is_a_tall_wading_bird.m4a
testdata/m4a_slow/: A_Tusk_is_used_to_make_costly_gifts.m4a  A_big_wet_stain_was_on_the_round_carpet.m4a  A_blue_crane_is_a_tall_wading_bird.m4a
testdata/webm/: A_big_wet_stain_was_on_the_round_carpet.webm  A_blue_crane_is_a_tall_wading_bird.webm
tests/: integration.rs  opus_bench.rs
