[package]
name = "media-api"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"
autobenches = false
default-run = "media-api"

[dependencies]
# Server framework from web-services
web-service = { git = "https://github.com/wavey-ai/web-services.git", branch = "feature/optional-http-pack" }
tls-helpers = { git = "https://github.com/wavey-ai/tls-helpers.git" }

# Audio decoding
soundkit-decoder = { git = "https://github.com/wavey-ai/soundkit.git" }
soundkit = { git = "https://github.com/wavey-ai/soundkit.git" }
frame-header = { git = "https://github.com/wavey-ai/frame-header.git" }

# TCP transport
tcp-changes = { git = "https://github.com/wavey-ai/tcp-changes.git" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# HTTP types
http = "1"
bytes = "1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
structopt = "0.3"

# Load test dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
portpicker = "0.1"
base64 = "0.22"

# System info
num_cpus = "1"

# TLS for TCP streams
tokio-rustls = "0.26"
rustls = "0.23"

# gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
tokio-util = "0.7"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
rustls-pemfile = "2"
# HTTP/3 client for testing
quinn = "0.11"
h3 = { git = "https://github.com/hyperium/h3.git" }
h3-quinn = { git = "https://github.com/hyperium/h3.git" }
rustls = "0.23"

[[bin]]
name = "media-api"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bin]]
name = "load_test"
path = "benches/load_test.rs"

[[test]]
name = "opus_bench"
path = "tests/opus_bench.rs"
